--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -1,5 +1,5 @@
 <!--
-  Generated template for the LoginPage page.
+  Generated template for the RegisterPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
@@ -7,18 +7,14 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>用户登录</ion-title>
-    <ion-buttons>
-      <button ion-button (click)="dismiss()">
-        <span ion-text color="primary" showWhen="ios">取消</span>
-        <ion-icon name="md-close" showWhen="android"></ion-icon>
-      </button>
-    </ion-buttons>
+    <ion-title>用户注册</ion-title>
   </ion-navbar>
 
 </ion-header>
 
+
 <ion-content>
+
   <ion-list>
     <ion-item>
       <ion-label stacked>手机号码</ion-label>
@@ -26,16 +22,26 @@
     </ion-item>
 
     <ion-item>
+      <ion-label stacked>昵称</ion-label>
+      <ion-input type="text" [(ngModel)]="nickName"></ion-input>
+    </ion-item>
+
+    <ion-item>
       <ion-label stacked>密码</ion-label>
       <ion-input type="password" [(ngModel)]="password"></ion-input>
     </ion-item>
 
+    <ion-item>
+      <ion-label stacked>确认密码</ion-label>
+      <ion-input type="password" [(ngModel)]="password"></ion-input>
+    </ion-item>
   </ion-list>
+
   <div padding>
-    <button ion-button color="primary" block (click)="login()">登 录</button>
+    <button ion-button color="primary" block >注册</button>
   </div>
   <div padding text-center>
-    <button ion-button color="primary" outline (click)="pushRegisterPage()">没有账号？注册</button>
+    <button ion-button color="primary" outline >已有账号？登陆</button>
   </div>
-</ion-content>
 
+</ion-content>
