--- a/src/pages/more/more.html
+++ b/src/pages/more/more.html
@@ -24,6 +24,14 @@
     </ion-card>
   </div>
   <div *ngIf="logined">
-    登陆成功啦！
+    <ion-list class="marginTop">
+      <button ion-item (click)="gotoUserPage()">
+        <ion-avatar item-start>
+          <img src="{{headface}}" />
+        </ion-avatar>
+        <h2>{{userInfo.UserNickName}}</h2>
+        <p>查看个人主页或编辑简介</p>
+      </button>
+    </ion-list>
   </div>
 </ion-content>
