修改头像之上传页面

--- a/src/pages/user/user.html
+++ b/src/pages/user/user.html
@@ -14,7 +14,7 @@
 
 
 <ion-content>
-  <ion-list class="marginTop marginBottom">
+  <ion-list class="marginTop marginBottom" (click)="gotoHeadface()">
     <button ion-item>
       <ion-avatar item-start><img src="{{headface}}"/></ion-avatar>
       <h2>修改头像</h2>
