--- a/src/pages/headface/headface.html
+++ b/src/pages/headface/headface.html
@@ -14,7 +14,7 @@
 
 
 <ion-content padding>
-  <img src="" style="width:100%">
+  <img src="{{pathForImage(lastPicture)}}" style="width:100%" [hidden]="lastPicture === null">
   <h3>请从图库中选择一张图片</h3>
 
 </ion-content>
@@ -25,7 +25,7 @@
       <button ion-button icon-left (click)="selectAS()">
         <ion-icon name="camera"></ion-icon>选择...
       </button>
-      <button ion-button icon-left>
+      <button ion-button icon-left  (click) = uploadImage() [disabled]="lastPicture === null">
         <ion-icon name="cloud-upload"></ion-icon>上传
       </button>
     </ion-buttons>
