--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,17 +1,58 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
+  <ion-toolbar>
+    <ion-searchbar placeholder="搜索: 玄武科技"></ion-searchbar>
+    <ion-icon name="text" class="top_header_message_icon" (click)="gotoChat()"></ion-icon>
+  </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  <h2>Hello Ionic!</h2>
-  <p>
-    This starter project comes with simple tabs-based layout for apps
-    that are going to primarily use a Tabbed UI.
-  </p>
-  <p>
-    Take a look at the <code>src/pages/</code> directory to add or change tabs,
-    update any existing page or create new pages.
-  </p>
+<ion-content>
+  <div class="floatMenu">
+    <ion-grid>
+      <ion-row>
+        <ion-col col-4 text-center>
+          <div (click)="gotoQuestion()">
+            <ion-icon name="create"></ion-icon>
+            提问
+          </div>
+        </ion-col>
+        <ion-col col-4 text-center>
+          <div><span style="float:left;color:#dddddd">|</span>
+            <ion-icon name="albums"></ion-icon>
+            回答
+            <span style="float:right;color:#dddddd">|</span>
+          </div>
+        </ion-col>
+        <ion-col col-4 text-center>
+          <div (click)="gotoQuestion()">
+            <ion-icon name="share-alt"></ion-icon>
+            分享
+          </div>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </div>
+
+  <ion-card *ngFor="let f of feeds" (click)="gotoDetail(f.IdentityId)">
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="{{f.HeadFace}}">
+      </ion-avatar>
+      <p>{{f.UserNickName}}回答了问题
+        <ion-icon class="more_button" name="more"></ion-icon>
+      </p>
+    </ion-item>
+    <h2>{{f.ContentTitle}}</h2>
+    <ion-card-content>
+      <p>{{f.ContentSummary}}</p>
+    </ion-card-content>
+    <ion-row>
+      <ion-col col-8 center text-left>
+        <ion-note>
+          {{f.LikeCount}} &nbsp;赞同&nbsp;&nbsp;.{{f.CommentCount}}&nbsp;评论&nbsp;&nbsp;.分享
+        </ion-note>
+      </ion-col>
+      <ion-col col-4></ion-col>
+    </ion-row>
+  </ion-card>
+
 </ion-content>
