--- a/src/pages/discovery/discovery.html
+++ b/src/pages/discovery/discovery.html
@@ -7,12 +7,42 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>discovery</ion-title>
+    <ion-title>发现</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
+<ion-content>
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="arrow-dropdown"
+      pullingText="下拉刷新"
+      refreshingSpinner="circles"
+      refreshingText="刷新中...">
+    </ion-refresher-content>
+  </ion-refresher>
+  <ion-card *ngFor="let q of questions" (click)="gotoDetail(q.IdentityId)">
+    <ion-item>
+      <ion-avatar item-start>
+        <img src="{{q.HeadFace}}">
+      </ion-avatar>
+      <p>{{q.UserNickName}}发布了问题
+        <ion-icon class="more_button" name="more"></ion-icon>
+      </p>
+    </ion-item>
+    <h2>{{q.ContentTitle}}</h2>
+    <ion-card-content>
+      <p>{{q.ContentSummary}}</p>
+    </ion-card-content>
+    <ion-row>
+      <ion-col col-8 center text-left>
+        <ion-note>
+          {{q.LikeCount}} &nbsp;赞同&nbsp;&nbsp;.{{q.CommentCount}}&nbsp;评论&nbsp;&nbsp;.分享
+        </ion-note>
+      </ion-col>
+      <ion-col col-4></ion-col>
+    </ion-row>
+  </ion-card>
 
 </ion-content>
