--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -6,6 +6,14 @@
 </ion-header>
 
 <ion-content>
+  <ion-refresher (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="arrow-dropdown"
+      pullingText="下拉刷新"
+      refreshingSpinner="circles"
+      refreshingText="刷新中...">
+    </ion-refresher-content>
+  </ion-refresher>
   <div class="floatMenu">
     <ion-grid>
       <ion-row>
