--- a/src/pages/chat-detail/chat-detail.html
+++ b/src/pages/chat-detail/chat-detail.html
@@ -1,17 +1,8 @@
-<!--
-  Generated template for the ChatDetailPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
   <ion-navbar>
-    <ion-title>{{chatUsername}}</ion-title>
+    <ion-title>{{chatUserName}}</ion-title>
   </ion-navbar>
-
 </ion-header>
-
 <ion-content>
   <div class="message-wrap">
     <div class="message right">
@@ -26,27 +17,30 @@
       </div>
     </div>
   </div>
-
 </ion-content>
 
-<ion-footer no-border style="height:55px">
+<ion-footer no-border [style.height]="isSelectedEmoji? '255px': '55px'">
   <ion-grid class="input-wrap">
     <ion-row>
       <ion-col col-2>
-        <button ion-button clear ion-only item-right>
+        <button ion-button clear ion-only item-right (click)="selectedEmoji()">
           <ion-icon name="md-happy"></ion-icon>
         </button>
       </ion-col>
       <ion-col col-8>
-        <ion-textarea placeholder="输入内容">
-        </ion-textarea>
+        <ion-textarea
+          #chatInput
+          [(ngModel)]="editorMessage"
+          (keyup.enter)="sendMessage()"
+          (focus)="focus()"
+          placeholder="输入内容"></ion-textarea>
       </ion-col>
       <ion-col col-2>
-        <button ion-button clear ion-only item-right>
+        <button ion-button clear ion-only item-right (click)="sendMessage()">
           <ion-icon name="send"></ion-icon>
         </button>
       </ion-col>
     </ion-row>
   </ion-grid>
-
+  <emjipicker *ngIf="isSelectedEmoji" ></emjipicker>
 </ion-footer>
